# ProjectRose

./: .gitignore  .gitmodules  CHANGELOG.md  CONTEXT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
RoseLibrary/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  openapi.json  pyproject.toml
RoseLibrary/data/: roselibrary.db  roselibrary.db-shm  roselibrary.db-wal
RoseLibrary/src/roselibrary/: config.py  main.py  project_store.py
RoseLibrary/src/roselibrary/indexing/: embeddings.py  vectorstore.py
RoseLibrary/src/roselibrary/instrumentation/: observability.py
RoseLibrary/src/roselibrary/models/: database.py  schemas.py
RoseLibrary/src/roselibrary/parsing/: parser.py  references.py
RoseLibrary/src/roselibrary/routes/: check.py  clear.py  overview.py  search.py  (+3 more)
RoseLibrary/tests/: conftest.py  test_check_route.py  test_clear_route.py  test_database.py  test_embeddings.py  test_health.py  test_overview_route.py  test_parser.py  test_references.py  test_references_route.py  test_search_route.py  test_status_route.py  test_typescript.py  test_update_route.py  test_vectorstore.py
RoseLibrary/tests/fixtures/: sample_javascript.js  sample_python.py  sample_reexport.py  sample_typescript.ts
RoseLibrary/tests/integration/: test_full_workflow.py
RoseObservability/: Dockerfile  pyproject.toml
RoseObservability/src/roseobservability/: config.py  db.py  main.py  models.py
RoseObservability/static/: app.js  index.html  library.html  library.js  request-detail.html  request-detail.js  styles.css
(+706 files in other folders)
