[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roselibrary"
version = "0.1.0"
description = "Code intelligence API — symbol graphs, natural language search, and reference finding"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "chromadb",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
roselibrary = "roselibrary.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/roselibrary"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
