[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roseobservability"
version = "0.1.0"
description = "Observability dashboard for ProjectRose services — collects traces, metrics, and per-request context"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
roseobservability = "roseobservability.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/roseobservability"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
